--- a/datax-core/pom.xml
+++ b/datax-core/pom.xml
@@ -78,6 +78,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>${apache.commons.exec.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
