--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <oshi.core.version>3.5.0</oshi.core.version>
 
         <phoenix.version>5.0.0-HBase-2.0</phoenix.version>
+        <apache.commons.exec.version>1.3</apache.commons.exec.version>
     </properties>
 
 </project>
